# Alice-Engine

./: README.md  api.py  main.py  mainloop.py  pyproject.toml  runner.py  script.as  script_parse.py  setup.py
example/: example-script.as  main.py
src/: api.py  main.py  mainloop.py  runner.py  script_parse.py
src/basic/: __init__.py  api.py  main.py  mainloop.py  runner.py  script_parse.py
test/: conftest.py  test_main.py  test_mainloop.py  test_runner.py  test_script_parse.py
